multiply table complete

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <h2></h2>
 
 <input type="number">
-<button>See Namta</button>
+<button onclick="handlebutton()">See Namta</button>
 
 <h1 class="namta1"></h1>
 <h1 class="namta2"></h1>
